tests/trybuild_fails/contravariance_violation.stderr
error[E0308]: mismatched types
  --> tests/trybuild_fails/contravariance_violation.rs:32:48
   |
32 |     let _: &'self_borrow for<'a> fn(&'a u32) = pair.with_dependent(|f| f);
   |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected reference `&for<'a> fn(&'a u32)`
              found reference `&fn(&u32)`
note: the lifetime requirement is introduced here
  --> src/pair.rs
   |
   |         F: for<'any> FnOnce(&'self_borrow <O as HasDependent<'any>>::Dependent) -> T,
   |                                                                                    ^
